--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.2",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
