--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@pbe/react-yandex-maps": "^1.2.2",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
